Button alignment issue fix

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ section{
     padding-bottom: 150px;
 }
 
+
 .link-button{
     text-decoration: none;
     background-image: linear-gradient(45deg, lightSalmon, tomato);
@@ -127,12 +128,11 @@ section{
 .border-area{
     border-style: solid;
     border-color: coral;
-    height: 100%;
 }
 
 #download-img{
-    width: 10%;
-    height: 10%;
+    width: 7%;
+    height: 7%;
     padding-top: 10px;
 }
 
@@ -140,7 +140,11 @@ section{
     text-decoration: none;
     color: white;
     font-weight: 700;
-    padding-left: 20px;
+    padding-left: 10px;
+}
+
+.download-img-text{
+    width: 25%;
 }
 
 
